| Summary: | ASTERISK-29352: res_rtp_asterisk: Fix frame delivery time when SSRC changes | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2021-03-17 10:27:29 | Date Closed: | 2021-03-18 15:43:18 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 16.16.2 18.2.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The res_rtp_asterisk module calculates a timestamp for each frame received, by mapping the first packet to the time received and then each subsequent packet is calculated based on that.
If the SSRC changes we need to reset this and start again as the timestamps are likely to start a new point. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-03-18 15:43:19.487-0500 Change 15632 merged by Joshua Colp: res_rtp_asterisk: Force resync on SSRC change. [https://gerrit.asterisk.org/c/asterisk/+/15632|https://gerrit.asterisk.org/c/asterisk/+/15632] By: Friendly Automation (friendly-automation) 2021-03-18 15:44:54.989-0500 Change 15631 merged by Joshua Colp: res_rtp_asterisk: Force resync on SSRC change. [https://gerrit.asterisk.org/c/asterisk/+/15631|https://gerrit.asterisk.org/c/asterisk/+/15631] By: Friendly Automation (friendly-automation) 2021-03-18 15:45:27.619-0500 Change 15642 merged by Joshua Colp: res_rtp_asterisk: Force resync on SSRC change. [https://gerrit.asterisk.org/c/asterisk/+/15642|https://gerrit.asterisk.org/c/asterisk/+/15642] By: Friendly Automation (friendly-automation) 2021-03-18 15:46:30.444-0500 Change 15641 merged by Joshua Colp: res_rtp_asterisk: Force resync on SSRC change. [https://gerrit.asterisk.org/c/asterisk/+/15641|https://gerrit.asterisk.org/c/asterisk/+/15641] | ||